{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Movement",
            "id": "73a7a37b-34ea-4716-8567-f29e6fc8246a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "744a0805-4ba4-42c7-8ba7-d173ea9a0b61",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "6cec2f2e-9158-4903-8969-9a1a3ca03295",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3d692baf-5626-4ecf-81f4-53130fb79732",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e12bb74f-4f23-4901-8908-2373c4512691",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "71408f1c-8edb-45b4-b101-921a4fb77f2b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dcc3b06e-691c-4322-b6bf-2452a3caa958",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Jump",
            "id": "2b82b4a4-85d7-4070-a72f-37d7a27b1223",
            "actions": [
                {
                    "name": "Jumping",
                    "type": "Button",
                    "id": "15c0a615-6beb-47f9-9fdc-810834b5a815",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9482fa5a-1b29-45dc-b2c4-b9c936860258",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jumping",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "interaction",
            "id": "35247eb7-b58a-4c34-835a-d61ae7993051",
            "actions": [
                {
                    "name": "interact",
                    "type": "Button",
                    "id": "da1aa2cd-e2d8-4f81-a5d6-661ce5b67e90",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fc66cd9f-4713-4e23-a892-c0889e27169d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Look",
            "id": "77b1c127-5081-4bf1-824c-f86d0e728014",
            "actions": [
                {
                    "name": "LookRight",
                    "type": "Value",
                    "id": "4d0170fe-29d2-467a-bd46-de41427b2804",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LookLeft",
                    "type": "Value",
                    "id": "bf5d617c-84ce-44c6-a52a-d95b4231cfaf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "2e8c3264-456e-4706-9552-306383a99be2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "right",
                    "id": "e781a826-c092-439e-8031-01322e483385",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "5a55bf54-4aa0-4ebc-8a58-c65d1a2f25fd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookLeft",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "right",
                    "id": "13df07f3-786f-4ae3-9ac6-ef1d646064fd",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}